--- a/style.css
+++ b/style.css
@@ -478,6 +478,22 @@ body {
 	font-weight: 700;
 }
 
+
+
+
+#content main .table-data .order table tr td .status.completed {
+	background: var(--blue);
+}
+#content main .table-data .order table tr td .status.process {
+	background: var(--yellow);
+}
+#content main .table-data .order table tr td .status.pending {
+	background: var(--orange);
+}
+
+
+
+
 #content main .table-data .todo {
 	flex-grow: 1;
 	flex-basis: 300px;
